z-index correct

--- a/gllacy/css/style.css
+++ b/gllacy/css/style.css
@@ -1412,7 +1412,7 @@ button:hover {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 500;
+  z-index: 10;
 }
 
 .search-btn {
